--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "FreelanceTotalCostConfig": {
+        "Minimum": 1000,
+        "Maximum": 999999
+    },
+    "ConnectionStrings": {
+        "DevFreelaCs": "Server=VALTAIR\\MSSQLSERVERNET; Database=DevFreelaDb; Integrated Security=True; trutServerCertificate=true"
+    }
 }
