--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -12,5 +12,10 @@
     },
     "ConnectionStrings": {
         "DevFreelaCs": "Server=VALTAIR\\MSSQLSERVERNET; Database=DevFreelaDb; Integrated Security=True; trustServerCertificate=true"
+    },
+    "Jwt": {
+        "Key": "EssaEMinhaSenhaSecretParaProtegerMeusTokens",
+        "Issuer": "DevFreela",
+        "Audience":  "ClientFreelancers"
     }
 }
